Jeroens Solution/chip8peg.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root) {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Instructions: peg$parseInstructions },
        peg$startRuleFunction  = peg$parseInstructions,

        peg$c0 = function(instructions) {
        	 return { opcodes: instructions }; 
         },
        peg$c1 = ";",
        peg$c2 = peg$literalExpectation(";", false),
        peg$c3 = /^[^\n\r]/,
        peg$c4 = peg$classExpectation(["\n", "\r"], true, false),
        peg$c5 = function() {
        		return null;
        	},
        peg$c6 = "cls",
        peg$c7 = peg$literalExpectation("cls", true),
        peg$c8 = function() {
        	return "00E0";
        },
        peg$c9 = "ret",
        peg$c10 = peg$literalExpectation("ret", true),
        peg$c11 = function() {
        	return "00EE";
        },
        peg$c12 = "sys",
        peg$c13 = peg$literalExpectation("SYS", true),
        peg$c14 = function(address) {
        	return "0" + address.value;
        },
        peg$c15 = "jp",
        peg$c16 = peg$literalExpectation("JP", true),
        peg$c17 = function(address) {
        	return "1" + address.value;
        },
        peg$c18 = "V0",
        peg$c19 = peg$literalExpectation("V0", false),
        peg$c20 = ", ",
        peg$c21 = peg$literalExpectation(", ", false),
        peg$c22 = function(address) {
        	return "B" + address.value;
        },
        peg$c23 = "call",
        peg$c24 = peg$literalExpectation("CALL", true),
        peg$c25 = function(address) {
        	return "2" + address.value;
        },
        peg$c26 = "se",
        peg$c27 = peg$literalExpectation("SE", true),
        peg$c28 = function(vregister, byteOrVRegister) {
        	if (byteOrVRegister.type == "byte") {
        		return "3" + vregister.value + byteOrVRegister.value; 
        	}
        	if (byteOrVRegister.type == "vregister") {
        		return "5" + vregister.value + byteOrVRegister.value + "0";
        	}
        	throw Error("unexpected type: " + byteOrVRegister.type);
        },
        peg$c29 = "sne",
        peg$c30 = peg$literalExpectation("SNE", true),
        peg$c31 = function(vregister, byteOrVRegister) {
        	if (byteOrVRegister.type == "byte") {
        		return "4" + vregister.value + byteOrVRegister.value; 
        	}
        	if (byteOrVRegister.type == "vregister") {
        		return "9" + vregister.value + byteOrVRegister.value + "0";
        	}
        	throw Error("unexpected type: " + byteOrVRegister.type);
        },
        peg$c32 = "ld",
        peg$c33 = peg$literalExpectation("LD", true),
        peg$c34 = function(vregister, byteOrVRegister) {
        	if (byteOrVRegister.type == "byte") {
        		return "6" + vregister.value + byteOrVRegister.value; 
        	}
        	if (byteOrVRegister.type == "vregister") {
        		return "8" + vregister.value + byteOrVRegister.value + "0";
        	}
        	throw Error("unexpected type: " + byteOrVRegister.type);
        },
        peg$c35 = function(address) {
          return "A" + address.value; 
        },
        peg$c36 = function(vregister) {
          return "F" + vregister.value + "55"; 
        },
        peg$c37 = function(vregister) {
          return "F" + vregister.value + "65"; 
        },
        peg$c38 = function(vregister) {
          return "F" + vregister.value + "07"; 
        },
        peg$c39 = function(vregister) {
          return "F" + vregister.value + "15"; 
        },
        peg$c40 = "K",
        peg$c41 = peg$literalExpectation("K", false),
        peg$c42 = function(vregister) {
          return "F" + vregister.value + "0A"; 
        },
        peg$c43 = "F",
        peg$c44 = peg$literalExpectation("F", false),
        peg$c45 = function(vregister) {
          return "F" + vregister.value + "29"; 
        },
        peg$c46 = "B",
        peg$c47 = peg$literalExpectation("B", false),
        peg$c48 = function(vregister) {
          return "F" + vregister.value + "33"; 
        },
        peg$c49 = "ST",
        peg$c50 = peg$literalExpectation("ST", false),
        peg$c51 = function(vregister) {
          return "F" + vregister.value + "18"; 
        },
        peg$c52 = "add",
        peg$c53 = peg$literalExpectation("ADD", true),
        peg$c54 = function(vregister, byteOrVRegister) {
        	if (byteOrVRegister.type == "byte") {
        		return "7" + vregister.value + byteOrVRegister.value; 
        	}
        	if (byteOrVRegister.type == "vregister") {
        		return "8" + vregister.value + byteOrVRegister.value + "4";
        	}
        	throw Error("unexpected type: " + byteOrVRegister.type);
        },
        peg$c55 = function(vregister) {
          return "F" + vregister.value + "1E"; 
        },
        peg$c56 = "or",
        peg$c57 = peg$literalExpectation("OR", true),
        peg$c58 = function(vregister1, vregister2) {
        		return "8" + vregister1.value + vregister2.value + "1";
        },
        peg$c59 = "and",
        peg$c60 = peg$literalExpectation("AND", true),
        peg$c61 = function(vregister1, vregister2) {
        		return "8" + vregister1.value + vregister2.value + "2";
        },
        peg$c62 = "xor",
        peg$c63 = peg$literalExpectation("XOR", true),
        peg$c64 = function(vregister1, vregister2) {
        		return "8" + vregister1.value + vregister2.value + "3";
        },
        peg$c65 = "sub",
        peg$c66 = peg$literalExpectation("SUB", true),
        peg$c67 = function(vregister1, vregister2) {
        		return "8" + vregister1.value + vregister2.value + "5";
        },
        peg$c68 = "subn",
        peg$c69 = peg$literalExpectation("SUBN", true),
        peg$c70 = function(vregister1, vregister2) {
        		return "8" + vregister1.value + vregister2.value + "7";
        },
        peg$c71 = "shr",
        peg$c72 = peg$literalExpectation("SHR", true),
        peg$c73 = function(vregister1, optional) {
        		if (optional !== null) {
        			return "8" + vregister1.value + optional[1].value + "6";
        		}
        		return "8" + vregister1.value + "0" + "6";
        },
        peg$c74 = "shl",
        peg$c75 = peg$literalExpectation("SHL", true),
        peg$c76 = function(vregister1, optional) {
        		if (optional !== null) {
        			return "8" + vregister1.value + optional[1].value + "E";
        		}
        		return "8" + vregister1.value + "0" + "E";
        },
        peg$c77 = "rnd",
        peg$c78 = peg$literalExpectation("RND", true),
        peg$c79 = function(vregister, byte) {
        		return "C" + vregister.value + byte.value;
        },
        peg$c80 = "drw",
        peg$c81 = peg$literalExpectation("DRW", true),
        peg$c82 = function(vregister1, vregister2, nibble) {
        		return "D" + vregister1.value + vregister2.value + nibble.value;
        },
        peg$c83 = "skp",
        peg$c84 = peg$literalExpectation("SKP", true),
        peg$c85 = function(vregister) {
        		return "E" + vregister.value + "9E";
        },
        peg$c86 = "sknp",
        peg$c87 = peg$literalExpectation("SKNP", true),
        peg$c88 = function(vregister) {
        		return "E" + vregister.value + "A1";
        },
        peg$c89 = "V",
        peg$c90 = peg$literalExpectation("V", false),
        peg$c91 = function(d) {
        		return {
        			type: "vregister",
        			value: d
        		};
        	},
        peg$c92 = "I",
        peg$c93 = peg$literalExpectation("I", false),
        peg$c94 = function() {
        		return {
        			type: "iregister"
        		};
        	},
        peg$c95 = "DT",
        peg$c96 = peg$literalExpectation("DT", false),
        peg$c97 = function() {
        		return {
        			type: "dtregister"
        		};
        	},
        peg$c98 = "0x",
        peg$c99 = peg$literalExpectation("0x", true),
        peg$c100 = function(h) {
        		return {
        			type: "byte",
        			value: h
        		};
        	},
        peg$c101 = function(h) {
        		return {
        			type: "address",
        			value: h
        		};
        	},
        peg$c102 = function(h) {
        		return {
        			type: "nibble",
        			value: h
        		};
        	},
        peg$c103 = function(d1, d2) {
        		return d1 + d2;
        	},
        peg$c104 = function(d1, d2, d3) {
        		return d1 + d2 + d3;
        	},
        peg$c105 = /^[0-9A-F]/i,
        peg$c106 = peg$classExpectation([["0", "9"], ["A", "F"]], false, true),
        peg$c107 = peg$otherExpectation("whitespace"),
        peg$c108 = /^[ \t]/,
        peg$c109 = peg$classExpectation([" ", "\t"], false, false),
        peg$c110 = /^[\n]/,
        peg$c111 = peg$classExpectation(["\n"], false, false),
        peg$c112 = /^[\n\r]/,
        peg$c113 = peg$classExpectation(["\n", "\r"], false, false),
        peg$c114 = function() {1,2},
        peg$c115 = peg$anyExpectation(),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseInstructions() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsenl();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsenl();
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseInstruction();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parseInstruction();
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parsenl();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parsenl();
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseInstruction() {
      var s0;

      s0 = peg$parseComment();
      if (s0 === peg$FAILED) {
        s0 = peg$parseCLS();
        if (s0 === peg$FAILED) {
          s0 = peg$parseRET();
          if (s0 === peg$FAILED) {
            s0 = peg$parseSYS();
            if (s0 === peg$FAILED) {
              s0 = peg$parseJP_ADDR();
              if (s0 === peg$FAILED) {
                s0 = peg$parseJP_V0();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseCALL();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseSE();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseSNE();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parseLD_V();
                        if (s0 === peg$FAILED) {
                          s0 = peg$parseLD_I_ADDRESS();
                          if (s0 === peg$FAILED) {
                            s0 = peg$parseLD_I_REGISTER_TO_MEMORY();
                            if (s0 === peg$FAILED) {
                              s0 = peg$parseLD_I_REGISTER_FROM_MEMORY();
                              if (s0 === peg$FAILED) {
                                s0 = peg$parseLD_GET_DT();
                                if (s0 === peg$FAILED) {
                                  s0 = peg$parseLD_PUT_DT();
                                  if (s0 === peg$FAILED) {
                                    s0 = peg$parseLD_K();
                                    if (s0 === peg$FAILED) {
                                      s0 = peg$parseLD_F();
                                      if (s0 === peg$FAILED) {
                                        s0 = peg$parseLD_B();
                                        if (s0 === peg$FAILED) {
                                          s0 = peg$parseLD_PUT_ST();
                                          if (s0 === peg$FAILED) {
                                            s0 = peg$parseADD();
                                            if (s0 === peg$FAILED) {
                                              s0 = peg$parseADD_I();
                                              if (s0 === peg$FAILED) {
                                                s0 = peg$parseOR();
                                                if (s0 === peg$FAILED) {
                                                  s0 = peg$parseAND();
                                                  if (s0 === peg$FAILED) {
                                                    s0 = peg$parseXOR();
                                                    if (s0 === peg$FAILED) {
                                                      s0 = peg$parseSUB();
                                                      if (s0 === peg$FAILED) {
                                                        s0 = peg$parseSHR();
                                                        if (s0 === peg$FAILED) {
                                                          s0 = peg$parseSUBN();
                                                          if (s0 === peg$FAILED) {
                                                            s0 = peg$parseSHL();
                                                            if (s0 === peg$FAILED) {
                                                              s0 = peg$parseRND();
                                                              if (s0 === peg$FAILED) {
                                                                s0 = peg$parseDRW();
                                                                if (s0 === peg$FAILED) {
                                                                  s0 = peg$parseSKP();
                                                                  if (s0 === peg$FAILED) {
                                                                    s0 = peg$parseSKNP();
                                                                  }
                                                                }
                                                              }
                                                            }
                                                          }
                                                        }
                                                      }
                                                    }
                                                  }
                                                }
                                              }
                                            }
                                          }
                                        }
                                      }
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseComment() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 59) {
        s1 = peg$c1;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        if (peg$c3.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          if (peg$c3.test(input.charAt(peg$currPos))) {
            s3 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c4); }
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseEOL();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c5();
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseCLS() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3).toLowerCase() === peg$c6) {
        s1 = input.substr(peg$currPos, 3);
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseEOL();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c8();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseRET() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3).toLowerCase() === peg$c9) {
        s1 = input.substr(peg$currPos, 3);
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseEOL();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c11();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSYS() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3).toLowerCase() === peg$c12) {
        s1 = input.substr(peg$currPos, 3);
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c13); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseAddress();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseEOL();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c14(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseJP_ADDR() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2).toLowerCase() === peg$c15) {
        s1 = input.substr(peg$currPos, 2);
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseAddress();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseEOL();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c17(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseJP_V0() {
      var s0, s1, s2, s3, s4, s5, s6;
